# BlobsTool

./: .gitignore  BlobsTool.sln  BlobsTool.vcxproj  BlobsTool.vcxproj.filters  CMakeLists.txt  README.md
hashtest/: hashtest.vcxproj  hashtest.vcxproj.filters
include/: Blob.h  BlobHash.h  BlobsList.h  BlobsListParser.h  BlobsSection.h  BlobsToolVersion.h
src/: BlobHash.cpp  BlobsList.cpp  BlobsListParser.cpp  BlobsSection.cpp  BlobsToolVersion.cpp  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  hashtest.cpp
